// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrafficTicketsDetail it renders correctly WITH Traffic Tickets 1`] = `
<FlatList
  ListEmptyComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "causeDetail": "This a cause",
        "fine": 2020,
        "folio": 1234567,
        "formattedDate": "2020-01-01",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`TrafficTicketsDetail it renders correctly WITHOUT Traffic Tickets 1`] = `
<FlatList
  ListEmptyComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={Array []}
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
